--- a/Resources/translations/SonataCommentBundle.en.xliff
+++ b/Resources/translations/SonataCommentBundle.en.xliff
@@ -18,6 +18,10 @@
                 <source>form_label_email</source>
                 <target>Your email address</target>
             </trans-unit>
+            <trans-unit id="form_label_author_name">
+                <source>form_label_author_name</source>
+                <target>Your name</target>
+            </trans-unit>
             <trans-unit id="sonata_comment_admin_edit">
                 <source>sonata_comment_admin_edit</source>
                 <target>Edit</target>
