--- a/Resources/translations/SonataCommentBundle.fr.xliff
+++ b/Resources/translations/SonataCommentBundle.fr.xliff
@@ -18,6 +18,10 @@
                 <source>form_label_email</source>
                 <target>Votre adresse e-mail</target>
             </trans-unit>
+            <trans-unit id="form_label_author_name">
+                <source>form_label_author_name</source>
+                <target>Votre nom</target>
+            </trans-unit>
             <trans-unit id="sonata_comment_admin_edit">
                 <source>sonata_comment_admin_edit</source>
                 <target>Editer</target>
