--- a/src/Resources/translations/SonataCommentBundle.ru.xliff
+++ b/src/Resources/translations/SonataCommentBundle.ru.xliff
@@ -1,147 +1,147 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" version="1.2">
-    <file source-language="en" target-language="ru" datatype="plaintext" original="">
-        <body>
-            <trans-unit id="conversation">
-                <source>conversation</source>
-                <target>Беседа</target>
-            </trans-unit>
-            <trans-unit id="form_label_body">
-                <source>form_label_body</source>
-                <target>Ваше сообщение</target>
-            </trans-unit>
-            <trans-unit id="form_label_website">
-                <source>form_label_website</source>
-                <target>URL вашего сайта</target>
-            </trans-unit>
-            <trans-unit id="form_label_email">
-                <source>form_label_email</source>
-                <target>Ваш e-mail</target>
-            </trans-unit>
-            <trans-unit id="form_label_note">
-                <source>form_label_note</source>
-                <target>Ваша оценка</target>
-            </trans-unit>
-            <trans-unit id="form_label_author_name">
-                <source>form_label_author_name</source>
-                <target>Ваше имя</target>
-            </trans-unit>
-            <trans-unit id="sonata_comment_admin_edit">
-                <source>sonata_comment_admin_edit</source>
-                <target>Редактировать</target>
-            </trans-unit>
-            <trans-unit id="sonata_comment_admin_view_comments">
-                <source>sonata_comment_admin_view_comments</source>
-                <target>Посмотреть комментарии</target>
-            </trans-unit>
-            <trans-unit id="sonata_comment_note_given">
-                <source>sonata_comment_note_given</source>
-                <target>Оценка дана: </target>
-            </trans-unit>
-            <trans-unit id="form.label_id">
-                <source>form.label_id</source>
-                <target>Идентификатор</target>
-            </trans-unit>
-            <trans-unit id="form.label_body">
-                <source>form.label_body</source>
-                <target>Сообщение</target>
-            </trans-unit>
-            <trans-unit id="form.label_email">
-                <source>form.label_email</source>
-                <target>E-mail</target>
-            </trans-unit>
-            <trans-unit id="form.label_website">
-                <source>form.label_website</source>
-                <target>URL сайта</target>
-            </trans-unit>
-            <trans-unit id="form.label_state">
-                <source>form.label_state</source>
-                <target>Статус</target>
-            </trans-unit>
-            <trans-unit id="form.label_created_at">
-                <source>form.label_created_at</source>
-                <target>Время создания</target>
-            </trans-unit>
-            <trans-unit id="form.label_permalink">
-                <source>form.label_permalink</source>
-                <target>Постоянная ссылка</target>
-            </trans-unit>
-            <trans-unit id="form.label_is_commentable">
-                <source>form.label_is_commentable</source>
-                <target>Комментарии включены</target>
-            </trans-unit>
-            <trans-unit id="form.label_private">
-                <source>form.label_private</source>
-                <target>Приватный</target>
-            </trans-unit>
-            <trans-unit id="form.label_category">
-                <source>form.label_category</source>
-                <target>Категория</target>
-            </trans-unit>
-            <trans-unit id="list.label_id">
-                <source>list.label_id</source>
-                <target>Идентификатор</target>
-            </trans-unit>
-            <trans-unit id="list.label_body">
-                <source>list.label_body</source>
-                <target>Сообщение</target>
-            </trans-unit>
-            <trans-unit id="list.label_created_at">
-                <source>list.label_created_at</source>
-                <target>Время создания</target>
-            </trans-unit>
-            <trans-unit id="list.label_permalink">
-                <source>list.label_permalink</source>
-                <target>Постоянная ссылка</target>
-            </trans-unit>
-            <trans-unit id="list.label_is_commentable">
-                <source>list.label_is_commentable</source>
-                <target>Комментарии включены</target>
-            </trans-unit>
-            <trans-unit id="list.label_private">
-                <source>list.label_private</source>
-                <target>Приватный</target>
-            </trans-unit>
-            <trans-unit id="list.label_average_note">
-                <source>list.label_average_note</source>
-                <target>Средняя оценка</target>
-            </trans-unit>
-            <trans-unit id="list.label_note">
-                <source>list.label_note</source>
-                <target>Оценка</target>
-            </trans-unit>
-            <trans-unit id="list.label_state">
-                <source>list.label_state</source>
-                <target>Статус</target>
-            </trans-unit>
-            <trans-unit id="list.label_num_comments">
-                <source>list.label_num_comments</source>
-                <target>Количество комментариев</target>
-            </trans-unit>
-            <trans-unit id="list.label_category">
-                <source>list.label_category</source>
-                <target>Категория</target>
-            </trans-unit>
-            <trans-unit id="breadcrumb.link_thread_list">
-                <source>breadcrumb.link_thread_list</source>
-                <target>Беседа</target>
-            </trans-unit>
-            <trans-unit id="breadcrumb.link_comment_list">
-                <source>breadcrumb.link_comment_list</source>
-                <target>Список комментариев</target>
-            </trans-unit>
-            <trans-unit id="moderate">
-                <source>moderate</source>
-                <target>Модерировать</target>
-            </trans-unit>
-            <trans-unit id="invalid">
-                <source>invalid</source>
-                <target>Невалидный</target>
-            </trans-unit>
-            <trans-unit id="valid">
-                <source>valid</source>
-                <target>Валидный</target>
-            </trans-unit>
-        </body>
-    </file>
+  <file source-language="en" target-language="ru" datatype="plaintext" original="file.ext">
+    <body>
+      <trans-unit id="conversation">
+        <source>conversation</source>
+        <target>Беседа</target>
+      </trans-unit>
+      <trans-unit id="form_label_body">
+        <source>form_label_body</source>
+        <target>Ваше сообщение</target>
+      </trans-unit>
+      <trans-unit id="form_label_website">
+        <source>form_label_website</source>
+        <target>URL вашего сайта</target>
+      </trans-unit>
+      <trans-unit id="form_label_email">
+        <source>form_label_email</source>
+        <target>Ваш e-mail</target>
+      </trans-unit>
+      <trans-unit id="form_label_note">
+        <source>form_label_note</source>
+        <target>Ваша оценка</target>
+      </trans-unit>
+      <trans-unit id="form_label_author_name">
+        <source>form_label_author_name</source>
+        <target>Ваше имя</target>
+      </trans-unit>
+      <trans-unit id="sonata_comment_admin_edit">
+        <source>sonata_comment_admin_edit</source>
+        <target>Редактировать</target>
+      </trans-unit>
+      <trans-unit id="sonata_comment_admin_view_comments">
+        <source>sonata_comment_admin_view_comments</source>
+        <target>Посмотреть комментарии</target>
+      </trans-unit>
+      <trans-unit id="sonata_comment_note_given">
+        <source>sonata_comment_note_given</source>
+        <target>Оценка дана: </target>
+      </trans-unit>
+      <trans-unit id="form.label_id">
+        <source>form.label_id</source>
+        <target>Идентификатор</target>
+      </trans-unit>
+      <trans-unit id="form.label_body">
+        <source>form.label_body</source>
+        <target>Сообщение</target>
+      </trans-unit>
+      <trans-unit id="form.label_email">
+        <source>form.label_email</source>
+        <target>E-mail</target>
+      </trans-unit>
+      <trans-unit id="form.label_website">
+        <source>form.label_website</source>
+        <target>URL сайта</target>
+      </trans-unit>
+      <trans-unit id="form.label_state">
+        <source>form.label_state</source>
+        <target>Статус</target>
+      </trans-unit>
+      <trans-unit id="form.label_created_at">
+        <source>form.label_created_at</source>
+        <target>Время создания</target>
+      </trans-unit>
+      <trans-unit id="form.label_permalink">
+        <source>form.label_permalink</source>
+        <target>Постоянная ссылка</target>
+      </trans-unit>
+      <trans-unit id="form.label_is_commentable">
+        <source>form.label_is_commentable</source>
+        <target>Комментарии включены</target>
+      </trans-unit>
+      <trans-unit id="form.label_private">
+        <source>form.label_private</source>
+        <target>Приватный</target>
+      </trans-unit>
+      <trans-unit id="form.label_category">
+        <source>form.label_category</source>
+        <target>Категория</target>
+      </trans-unit>
+      <trans-unit id="list.label_id">
+        <source>list.label_id</source>
+        <target>Идентификатор</target>
+      </trans-unit>
+      <trans-unit id="list.label_body">
+        <source>list.label_body</source>
+        <target>Сообщение</target>
+      </trans-unit>
+      <trans-unit id="list.label_created_at">
+        <source>list.label_created_at</source>
+        <target>Время создания</target>
+      </trans-unit>
+      <trans-unit id="list.label_permalink">
+        <source>list.label_permalink</source>
+        <target>Постоянная ссылка</target>
+      </trans-unit>
+      <trans-unit id="list.label_is_commentable">
+        <source>list.label_is_commentable</source>
+        <target>Комментарии включены</target>
+      </trans-unit>
+      <trans-unit id="list.label_private">
+        <source>list.label_private</source>
+        <target>Приватный</target>
+      </trans-unit>
+      <trans-unit id="list.label_average_note">
+        <source>list.label_average_note</source>
+        <target>Средняя оценка</target>
+      </trans-unit>
+      <trans-unit id="list.label_note">
+        <source>list.label_note</source>
+        <target>Оценка</target>
+      </trans-unit>
+      <trans-unit id="list.label_state">
+        <source>list.label_state</source>
+        <target>Статус</target>
+      </trans-unit>
+      <trans-unit id="list.label_num_comments">
+        <source>list.label_num_comments</source>
+        <target>Количество комментариев</target>
+      </trans-unit>
+      <trans-unit id="list.label_category">
+        <source>list.label_category</source>
+        <target>Категория</target>
+      </trans-unit>
+      <trans-unit id="breadcrumb.link_thread_list">
+        <source>breadcrumb.link_thread_list</source>
+        <target>Беседа</target>
+      </trans-unit>
+      <trans-unit id="breadcrumb.link_comment_list">
+        <source>breadcrumb.link_comment_list</source>
+        <target>Список комментариев</target>
+      </trans-unit>
+      <trans-unit id="moderate">
+        <source>moderate</source>
+        <target>Модерировать</target>
+      </trans-unit>
+      <trans-unit id="invalid">
+        <source>invalid</source>
+        <target>Невалидный</target>
+      </trans-unit>
+      <trans-unit id="valid">
+        <source>valid</source>
+        <target>Валидный</target>
+      </trans-unit>
+    </body>
+  </file>
 </xliff>
